# BeagleDrone

./: .gitignore  .travis.yml  CNAME  Makefile  README.md  index.html  params.json
app/: command.c  command.h  communication.c  communication.h  log.h  main.c
client/: CMakeLists.txt  console.py  crc16.py  gimbalwidget.cpp  gimbalwidget.h  joysticksdialog.cpp  joysticksdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  motorswidget.cpp  motorswidget.h
client/ui/: joystickeditdialog.ui  joysticksdialog.ui  mainwindow.ui  motorswidget.ui
firmware/: Makefile  main.c
firmware/app/: afproto.c  afproto.h  ahrs.c  ahrs.h  buffer.c  buffer.h  command.c  command.h  communication.c  communication.h  control.c  control.h  crc16.c  imu.c  imu.h  imusensors.c  imusensors.h  log.c  log.h  main.c  mathhelp.c  mathhelp.h  mathtypes.c  mathtypes.h  motorcontrol.c  motorcontrol.h  motorhelp.c  motorhelp.h  motors.c  motors.h  motorstate.c  motorstate.h  quaternion.c  quaternion.h  state.c  state.h
firmware/docs/: communication.md  navigation.md
firmware/glue/: communication.c  communication.h  motors.c  motors.h
firmware/kernel/: interrupt.c  interrupt.h  sysdelay.c
firmware/tests/: Makefile  test_buffer.c  test_command.c  test_communication.c  test_help.c  test_help.h  test_motorstate.c  test_quaternion.c  test_state.c
firmware/utils/: delay.c  (+1 more)
kernel/: beaglebone.h  cpu.c  delay.c  delay.h  interrupt.c  interrupt.cpp  interrupt.h  main.c  main.cpp  main.h  start.cpp  sysdefs.h  sysdelay.c  sysdelay.h
utils/: afproto.c  uartConsole.c  uartConsole.h  uartStdio.c
(+52 files in other folders)
